--- a/app/src/main/res/layout/item_row_video.xml
+++ b/app/src/main/res/layout/item_row_video.xml
@@ -21,7 +21,7 @@
             card_view:cardElevation="5dp"
             card_view:cardMaxElevation="5dp"
             card_view:cardPreventCornerOverlap="false"
-            card_view:cardUseCompatPadding="false"
+            card_view:cardUseCompatPadding="true"
             android:clickable="true">
 
             <RelativeLayout
