--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -15,9 +15,9 @@
             android:icon="@drawable/ic_church"
             android:title="Endereços" />
         <item
-            android:id="@+id/nav_noticias"
+            android:id="@+id/nav_videos"
             android:icon="@drawable/ic_newspaper"
-            android:title="Noticias" />
+            android:title="Videos Novo Tempo" />
         <item
             android:id="@+id/nav_contatos"
             android:icon="@drawable/ic_contact_mail"
